--- a/src/CombatAnalysis.BL/CombatAnalysis.BL.csproj
+++ b/src/CombatAnalysis.BL/CombatAnalysis.BL.csproj
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CombatAnalysis.DAL\CombatAnalysis.DAL.csproj" />
   </ItemGroup>
 
 </Project>
