--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -13,7 +13,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "reactstrap": "~8.10.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "ajv": "^6.12.6",
