Refactoring App and WebAPI

--- a/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
+++ b/src/API/CombatAnalysis.CombatParserAPI/CombatAnalysis.CombatParserAPI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\CombatAnalysis.BL\CombatAnalysis.BL.csproj" />
+    <ProjectReference Include="..\..\CombatAnalysis.Core\CombatAnalysis.Core.csproj" />
   </ItemGroup>
 
 
