--- a/src/CombatAnalysis.App/CombatAnalysis.App.csproj
+++ b/src/CombatAnalysis.App/CombatAnalysis.App.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
