--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,5 +40,11 @@ jobs:
     - name: Execute unit tests
       run: dotnet test
         
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        # A file, directory or wildcard pattern that describes what to upload
+        path: src\CombatAnalysis.App\bin\Debug\netcoreapp3.1
+    
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
