--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,9 +13,6 @@ jobs:
     strategy:
       matrix:
         configuration: [Debug, Release]
-        include:
-            - build_path_debug: src\CombatAnalysis.App\bin\Debug\netcoreapp3.1
-            - build_path_release: src\CombatAnalysis.App\bin\Release\netcoreapp3.1\win-x86\msixpublish
 
     runs-on: windows-latest
 
@@ -44,7 +41,7 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
-        path: ${{ matrix.build_path }}
+        path: src\CombatAnalysis.App\bin\Release\netcoreapp3.1\win-x86\msixpublish
     
     - name: Download a Build Artifact
       uses: actions/download-artifact@v3.0.0
