--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -44,6 +44,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v1
           
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: 'src\CombatAnalysis.WebApp\bin\Debug\netcoreapp3.1'
+          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@main
