--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -2,6 +2,9 @@
   "name": "combatanalysis.webapp",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "dependencies": {
     "bootstrap": "~4.6.1",
     "jquery": "~3.6.0",
