--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'src\CombatAnalysis.WebApp\release\wwwroot'
+          path: 'release'
           
       - name: Deploy to GitHub Pages
         id: deployment
