--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/configure-pages@v1
       
       - name: Publish .NET Core Project
-        run: dotnet publish src\CombatAnalysis.WebApp\CombatAnalysis.WebApp.csproj -c Release -o release --nologo
+        run: dotnet publish src\WebApplication1\WebApplication1.csproj -c Release -o release
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
