--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -54,4 +54,4 @@ jobs:
           
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@main
+        uses: actions/deploy-pages@Solinx97-patch-1
