--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -11,6 +11,11 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v2
       
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 3.1.x
+        
     - name: Publish
       run: dotnet publish src\CombatAnalysis.WebApp\ -c Release /p:WebPublishMethod=Package /p:PackageLocation="publish"
       
