--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -16,6 +16,9 @@ jobs:
       with:
         dotnet-version: 3.1.x
         
+    - name: Restore dependencies
+      run: dotnet restore
+      
     - name: Publish
       run: dotnet publish src\CombatAnalysis.WebApp\ --no-restore /p:WebPublishMethod=Package /p:PackageLocation="publish"
       
