--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v20
       with:
-        aws_access_key: AKIAVGQFZJBSZQAR6F7E
-        aws_secret_key: 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
+        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: details-anslysis
         environment_name: Detailsanslysis-env
-        version_label: 0.0.12
+        version_label: 0.0.13
         region: us-east-1
         deployment_package: src\CombatAnalysis.WebApp\publish\CombatAnalysis.WebApp.zip
