--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -5,6 +5,8 @@ on:
 
 env:
   CI: false
+  applicationName: details-anslysis
+  applicationEnv: Detailsanslysis-env
   
 jobs:
   build:
@@ -21,6 +23,9 @@ jobs:
       with:
         dotnet-version: 3.1.x
       
+    - name: Build
+      run: dotnet build
+      
     - name: Publish
       run: dotnet publish src\CombatAnalysis.WebApp\ /p:WebPublishMethod=Package /p:PackageLocation="publish"
       
@@ -29,8 +34,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: details-anslysis
-        environment_name: Detailsanslysis-env
+        application_name: ${{ env.applicationName }}
+        environment_name: ${{ env.applicationEnv }}
         version_label: ${{ github.sha }}
         region: us-east-1
         deployment_package: src\CombatAnalysis.WebApp\publish\CombatAnalysis.WebApp.zip
