--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -7,6 +7,7 @@ env:
   CI: false
   applicationName: details-anslysis
   applicationEnv: Detailsanslysis-env
+  region: us-east-1
   
 jobs:
   build:
@@ -37,5 +38,5 @@ jobs:
         application_name: ${{ env.applicationName }}
         environment_name: ${{ env.applicationEnv }}
         version_label: ${{ github.sha }}
-        region: us-east-1
+        region: ${{ env.region }}
         deployment_package: src\CombatAnalysis.WebApp\publish\CombatAnalysis.WebApp.zip
