--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -1,21 +1,23 @@
 name: Deploy master
 on:
-  push:
+
+  pull_request:
     branches: [ "main" ]
 
 env:
+
   CI: false
   applicationName: details-anslysis
   applicationEnv: Detailsanslysis-env
   region: us-east-1
-  
-jobs:
-  build:
-    environment:
-      name: aws
-    runs-on: windows-latest
-    steps:
 
+jobs:
+
+  build:
+  
+    runs-on: windows-latest
+    
+    steps:
     - name: Checkout source code
       uses: actions/checkout@v2
       
@@ -27,6 +29,14 @@ jobs:
     - name: Build
       run: dotnet build
       
+  deploy:
+  
+    needs: build
+    environment:
+      name: aws
+    runs-on: windows-latest
+
+    steps:
     - name: Publish
       run: dotnet publish src\CombatAnalysis.WebApp\ /p:WebPublishMethod=Package /p:PackageLocation="publish"
       
