--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -27,7 +27,7 @@ jobs:
         dotnet-version: 3.1.x
       
     - name: Build
-      run: dotnet build
+      run: dotnet build src\CombatAnalysis.WebApp\CombatAnalysis.WebApp.csproj
       
   deploy:
   
@@ -37,6 +37,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
+      
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 3.1.x
+        
     - name: Publish
       run: dotnet publish src\CombatAnalysis.WebApp\ /p:WebPublishMethod=Package /p:PackageLocation="publish"
       
