--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -1,7 +1,7 @@
 name: Deploy master
 on:
 
-  pull_request:
+  push:
     branches: [ "main" ]
 
 env:
@@ -12,10 +12,26 @@ env:
   region: us-east-1
 
 jobs:
+
+  build:
+
+    runs-on: windows-latest
+
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: 3.1.x
+
+    - name: Build
+      run: dotnet build src\CombatAnalysis.WebApp\CombatAnalysis.WebApp.csproj
       
   deploy:
   
-    # needs: build
+    needs: build
     environment:
       name: aws
     runs-on: windows-latest
@@ -30,14 +46,7 @@ jobs:
         dotnet-version: 3.1.x
     
     - name: Publish
-      # run: dotnet publish src\CombatAnalysis.WebApp\ /p:WebPublishMethod=Package /p:PackageLocation="publish"
-      run: dotnet publish src\CombatAnalysis.WebApp\ -c Release
-      
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
-      with:
-        name: webAppArtifact
-        path: src\CombatAnalysis.WebApp\bin\Release\netcoreapp3.1\publish\
+      run: dotnet publish src\CombatAnalysis.WebApp\ /p:WebPublishMethod=Package /p:PackageLocation="publish"
         
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v20
@@ -48,6 +57,5 @@ jobs:
         environment_name: ${{ env.applicationEnv }}
         version_label: ${{ github.sha }}
         region: ${{ env.region }}
-        # deployment_package: src\CombatAnalysis.WebApp\publish\CombatAnalysis.WebApp.zip
-        deployment_package: webAppArtifact.zip
+        deployment_package: src\CombatAnalysis.WebApp\publish\CombatAnalysis.WebApp.zip
         use_existing_version_if_available: true
