--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
   # pull_request:
     # branches: [ "main", "development" ]
-
+  workflow_dispatch:
+  
 jobs:
   
   build:
@@ -37,11 +38,3 @@ jobs:
       
     - name: Execute unit tests
       run: dotnet test
-        
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.0
-      with:
-        path: src\CombatAnalysis.App\bin\Release\netcoreapp3.1\win-x86\msixpublish
-    
-    - name: Download a Build Artifact
-      uses: actions/download-artifact@v3.0.0
