--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
   # pull_request:
     # branches: [ "main", "development" ]
-
+  workflow_dispatch:
+  
 jobs:
   
   build:
