--- a/tests/CombatAnalysis.Parser.Tests/CombatAnalysis.Parser.Tests.csproj
+++ b/tests/CombatAnalysis.Parser.Tests/CombatAnalysis.Parser.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="testsData\**" />
+    <EmbeddedResource Remove="testsData\**" />
+    <None Remove="testsData\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
