--- a/tests/smoke/CombatAnalysis.App.Smoke.Tests/CombatAnalysis.App.Smoke.Tests.csproj
+++ b/tests/smoke/CombatAnalysis.App.Smoke.Tests/CombatAnalysis.App.Smoke.Tests.csproj
@@ -6,12 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="testsData\**" />
-    <EmbeddedResource Remove="testsData\**" />
-    <None Remove="testsData\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FlaUI.Core" Version="3.2.0" />
     <PackageReference Include="FlaUI.UIA3" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
@@ -21,6 +15,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\CombatAnalysis.App\CombatAnalysis.App.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="testsData\WoWCombatLog.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
