--- a/.github/workflows/deploy-to-aws.yml
+++ b/.github/workflows/deploy-to-aws.yml
@@ -1,9 +1,10 @@
 name: Deploy to AWS
 on:
 
-  push:
-    branches: [ "main" ]
-
+  # push:
+    # branches: [ "main" ]
+  workflow_dispatch:
+  
 env:
 
   CI: false
