--- a/.github/workflows/smokeTests.yml
+++ b/.github/workflows/smokeTests.yml
@@ -1,8 +1,8 @@
 name: Smoke tests
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+    # branches: [ "main" ]
   # pull_request:
     # branches: [ "main", "development" ]
   workflow_dispatch:
