--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "bootstrap": "~4.6.1",
     "jquery": "~3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "~1.11.5",
     "react": "~16.14.0",
     "react-dom": "~16.14.0",
+    "react-redux": "^8.0.2",
     "react-router": "~5.3.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
