--- a/src/CombatAnalysis.WebApp/ClientApp/package.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "bootstrap": "~4.6.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "date-fns": "^2.29.2",
     "jquery": "~3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "~1.11.5",
@@ -15,6 +21,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.3.0",
     "reactstrap": "~8.10.1",
+    "recharts": "^2.1.13",
     "rimraf": "^3.0.2",
     "sass": "^1.54.0"
   },
