--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="combatParserApiPort" value="https://localhost:5001"/>
+		<add key="combatParserApiPort" value="https://localhost:5001/"/>
+		<add key="userApiPort" value="https://localhost:5003/"/>
 	</appSettings>
 </configuration>
