--- a/src/CombatAnalysis.WebApp/appsettings.json
+++ b/src/CombatAnalysis.WebApp/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Database": {
+    "Name": "MSSQL",
+    "DataProcessingType": "StoredProcedure"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
