Switch to MSSQL database

--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.json
@@ -1,9 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
-    "Name": "MSSQL",
+    "Name": "Firebase",
     "DataProcessingType": "StoredProcedure"
   },
   "Logging": {
