--- a/src/API/CombatAnalysis.UserApi/appsettings.json
+++ b/src/API/CombatAnalysis.UserApi/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Combat_Analysis;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Database": {
-    "Name": "Firebase",
+    "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
   },
   "Logging": {
