--- a/src/API/CombatAnalysis.CombatParserAPI/appsettings.json
+++ b/src/API/CombatAnalysis.CombatParserAPI/appsettings.json
@@ -4,7 +4,7 @@
     "Firebase": "https://detailsanalysisgamecombatlogs-default-rtdb.firebaseio.com/"
   },
   "Database": {
-    "Name": "Firebase",
+    "Name": "MSSQL",
     "DataProcessingType": "StoredProcedure"
   },
   "Logging": {
