Add support open new Window, use MVVM

--- a/src/CombatAnalysis.App/App.config
+++ b/src/CombatAnalysis.App/App.config
@@ -3,5 +3,6 @@
 	<appSettings>
 		<add key="combatParserApiPort" value="https://localhost:5001/"/>
 		<add key="userApiPort" value="https://localhost:5003/"/>
+		<add key="chatApiPort" value="https://localhost:5007/"/>
 	</appSettings>
 </configuration>
