Add TestStartup to APIs

--- a/tests/smoke/CombatAnalysis.App.Smoke.Tests/CombatAnalysis.App.Smoke.Tests.csproj
+++ b/tests/smoke/CombatAnalysis.App.Smoke.Tests/CombatAnalysis.App.Smoke.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="testsData\WoWCombatLog.txt">
+    <None Update="TestsData\WoWCombatLog.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
